* Upgraded to Grails 5.3.3
** Updated gradle to 7.2
** Adjusted gradle scripts
** Fixed publication task configuration
** Bumped version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,10 @@
-grailsVersion=3.2.4
-gradleWrapperVersion=3.5.1
+grailsVersion=5.3.3
+grailsGradlePluginVersion=5.3.0
+gradleWrapperVersion=7.2
+groovyVersion=3.0.11
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1024M
 
-productVersion=1.2.0
-isRelease=true
+productVersion=2.0.0
+isRelease=false
