--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,12 @@
 buildscript {
     repositories {
-        mavenLocal()
-        jcenter()
-        maven { url 'https://repo.grails.org/grails/core' }
+        maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.4.0'
-        classpath 'ru.d10xa:gradle-allure-plugin:0.5.2'
-        classpath 'org.grails.plugins:views-gradle:1.1.0'
+        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.31.0"
+        classpath "org.grails.plugins:views-gradle:2.3.2"
     }
 }
 
@@ -18,36 +16,37 @@ group 'com.exa.exacloud'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.grails.grails-plugin'
-apply plugin: 'org.grails.grails-plugin-publish'
+apply plugin: 'maven-publish'
 apply plugin: 'org.grails.plugins.views-json'
 apply plugin: 'com.jfrog.artifactory'
 
 repositories {
     mavenLocal()
-    jcenter()
+    mavenCentral()
     maven { url 'https://repo.grails.org/grails/core' }
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.grails:grails-bom:$grailsVersion"
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
     }
-    applyMavenExclusions false
 }
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-logging'
-    compile 'org.springframework.boot:spring-boot-autoconfigure'
-    compile 'org.grails:grails-core'
-    compile 'org.springframework.boot:spring-boot-starter-actuator'
-    compile 'org.springframework.boot:spring-boot-starter-tomcat'
-    compile 'org.grails:grails-dependencies'
-    compile 'org.grails:grails-web-boot'
-    compile 'org.grails.plugins:views-json:1.1.1'
-    console 'org.grails:grails-console'
-    profile 'org.grails.profiles:web-plugin'
-
-    testCompile 'org.grails:grails-plugin-testing'
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
+    compileOnly "io.micronaut:micronaut-inject-groovy"
+    console "org.grails:grails-console"
+    implementation "org.springframework.boot:spring-boot-starter-logging"
+    implementation "org.springframework.boot:spring-boot-autoconfigure"
+    implementation "org.grails:grails-core"
+    implementation "org.grails:grails-web-boot"
+    implementation "org.grails.plugins:views-json"
+    implementation "org.grails.plugins:views-json-templates"
+    profile "org.grails.profiles:web-plugin"
+    testImplementation "io.micronaut:micronaut-inject-groovy"
+    testImplementation "org.mockito:mockito-core"
+    testImplementation "org.grails:grails-web-testing-support"
 }
 
 if (!ext.has('ignoreTestFailures')) {
@@ -58,47 +57,64 @@ test {
     ignoreFailures = project.ext.ignoreTestFailures.toBoolean()
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '3.5.1'
+tasks.named('wrapper') {
     distributionType = Wrapper.DistributionType.ALL
+    gradleVersion = gradleWrapperVersion
 }
 
 
 bootRun {
-    jvmArgs('-Dspring.output.ansi.enabled=always')
+    ignoreExitValue true
+    jvmArgs(
+        '-Dspring.output.ansi.enabled=always',
+        '-noverify',
+        '-XX:TieredStopAtLevel=1',
+        '-Xmx1024m')
+    sourceResources sourceSets.main
+    String springProfilesActive = 'spring.profiles.active'
+    systemProperty springProfilesActive, System.getProperty(springProfilesActive)
+}
+
+tasks.withType(GroovyCompile) {
+    configure(groovyOptions) {
+        forkOptions.jvmArgs = ['-Xmx1024m']
+    }
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
 }
 // enable if you wish to package this plugin as a standalone application
-bootRepackage.enabled = false
+bootJar.enabled = false
 
-grailsPublish {
-    user = 'none'
-    key = 'none'
-    githubSlug = 'none'
-    title = 'none'
-    desc = 'none'
-    developers = [none: 'none']
-    portalUser = ''
-    portalPassword = ''
+tasks.named("bootJar") {
+    archiveClassifier = 'boot'
+}
+
+tasks.named("jar") {
+    archiveClassifier = ''
+}
+
+tasks.named("bootJarMainClassName") {
+    dependsOn compileGsonViews
+}
+
+java {
+    withSourcesJar()
 }
 
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            pom.withXml {
-                def pomNode = asNode()
-                pomNode.dependencyManagement.replaceNode {}
-                // simply remove dependencies without a version
-                // version-less dependencies are handled with dependencyManagement
-                // see https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/8 for more complete solutions
-                pomNode.dependencies.dependency.findAll {
-                    it.version.text().isEmpty()
-                }.each {
-                    it.replaceNode {}
+            from components.java
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
+                }
+                usage('java-runtime') {
+                    fromResolutionResult()
                 }
             }
-            from components.java
-            def descriptor =
-                    artifacts = ["build/libs/halm-${version}.jar", sourcesJar]
         }
     }
 }
